update lat and lon exemple of wcpms-introduction notebook

--- a/notebooks/Python/wcpms/wcpms-introduction.ipynb
+++ b/notebooks/Python/wcpms/wcpms-introduction.ipynb
@@ -28,7 +28,7 @@
     "    <br/><br/>\n",
     "    Contact: <a href=\"mailto:brazildatacube@inpe.br\">brazildatacube@inpe.br</a>\n",
     "    <br/><br/>\n",
-    "    Last Update: March 25, 2025\n",
+    "    Last Update: Oct 18, 2025\n",
     "</div>\n",
     "\n",
     "<br/>\n",
@@ -41,7 +41,7 @@
     "<div style=\"text-align: justify;  margin-left: 25%; margin-right: 25%;font-size: 75%; border-style: solid; border-color: #0077b9; border-width: 1px; padding: 5px;\">\n",
     "    <b>This Jupyter Notebook is a supplement to the following paper:</b>\n",
     "    <div style=\"margin-left: 10px; margin-right: 10px\">\n",
-    "    Sansigolo, G.; Queiroz, G. R.; Ferreira, K. R.; Adami, M.; Körting, T.<a href=\"http://www.google.com\" target=\"_blank\">A Web Service for Crop Sowing and Harvesting Detection from Earth Observation Data Cubes.\n",
+    "    Sansigolo, G.; Ferreira, K. R.; Queiroz, G. R.; Adami, M.; Körting, T.<a href=\"https://data.inpe.br/bdc/web/um-servico-da-web-para-extracao-de-metricas-de-fenologia-de-grandes-dados-de-observacao-da-terra/\" target=\"_blank\">A Web Service for Phenology Metrics Extraction from Big Earth Observation Data\n",
     "    </div>\n",
     "</div>"
    ]
